# 1dpoisson-ex

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: config.yaml  template.txt
examples/surface_level_dep/: energies_ground_states.npy  positions_ground_states.npy  surface_level.npy
examples/surface_level_dep/surface_level(0.5)/: surface_level(0.5).txt  surface_level(0.5)_Out.txt  surface_level(0.5)_Status.txt  surface_level(0.5)_Wave.txt
examples/surface_level_dep/surface_level(0.6)/: surface_level(0.6).txt  surface_level(0.6)_Out.txt  surface_level(0.6)_Status.txt  surface_level(0.6)_Wave.txt
examples/surface_level_dep/surface_level(0.7)/: surface_level(0.7).txt  surface_level(0.7)_Out.txt  surface_level(0.7)_Status.txt  surface_level(0.7)_Wave.txt
examples/surface_level_dep/surface_level(0.8)/: surface_level(0.8).txt  surface_level(0.8)_Out.txt  surface_level(0.8)_Status.txt  surface_level(0.8)_Wave.txt
examples/surface_level_dep/surface_level(0.9)/: surface_level(0.9).txt  surface_level(0.9)_Out.txt  surface_level(0.9)_Status.txt  surface_level(0.9)_Wave.txt
ldpoisson_ex/: __init__.py  __main__.py  cli.py  data.py  models.py  solver.py
